force-app/main/default/objects/Account_Extension__c/fields/actively_account_tldr__c.field-meta.xml
<CustomField>
    <fullName>actively_account_tldr__c</fullName>
    <label>Actively Account TLDR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>