force-app/main/default/objects/Account_Extension__c/fields/Application_Denied_Reason_p__c.field-meta.xml
<CustomField>
    <fullName>Application_Denied_Reason_p__c</fullName>
    <label>Application Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country is not supported</fullName>
            </value>
            <value>
                <fullName>Application denied</fullName>
            </value>
            <value>
                <fullName>Email Domain Not Supported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>