force-app/main/default/objects/Account_Extension__c/fields/BEAR_cm__c.field-meta.xml
<CustomField>
    <fullName>BEAR_cm__c</fullName>
    <description>This field is created based on GTMS-30381</description>
    <label>BEAR_cm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>