force-app/main/default/objects/Account_Extension__c/fields/BEAR_powered__c.field-meta.xml
<CustomField>
    <fullName>BEAR_powered__c</fullName>
    <description>This field is created based on GTMS-30381</description>
    <label>BEAR_powered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>