force-app/main/default/objects/Account_Extension__c/fields/Legal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notes__c</fullName>
    <description>This field is created based on GTMS-29258</description>
    <label>Legal Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>