force-app/main/default/objects/Account_Extension__c/fields/PAM_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>PAM_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAM Manager Approval</label>
    <type>Checkbox</type>
</CustomField>