force-app/main/default/objects/Account_Extension__c/fields/Sell_additional_telematics_related_prods__c.field-meta.xml
<CustomField>
    <fullName>Sell_additional_telematics_related_prods__c</fullName>
    <label>Sell additional telematics-related prods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>