force-app/main/default/objects/Account_Extension__c/validationRules/Prevent_Duplicate_Account_Extension.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Account_Extension</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; 
NOT(ISBLANK( Account__r.Account_Extension__c ))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>An Account Extension already exists for this Account. Only one Account Extension is allowed.</errorMessage>
</ValidationRule>